Latest index.html

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -36,11 +36,11 @@
         <div class="row no-v-padding header">
             <div class="twelve columns header">
                 <a href="#" class="main-logo-link"><div class="one column main-logo"></div></a>
-                <a href="#" class="main-title-link"><div class="three columns main-title"></a>
+                <a href="#" class="main-title-link"><div class="five columns main-title"></a>
                     <h2>EngageMedia</h2>
                     <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
-                <div class="three columns offset-by-one search">
+                <div class="six columns offset-by-one search">
                     <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EngageMedia">
                 </div>
                 <div class="six columns menu">
@@ -61,7 +61,7 @@
                     </ul>
                     <ul class="header-menu-item" id="user-menu">
                         <li class="header-button">
-                            <a href="#" class="user">
+                            <a href="#" class="dropdown-button">
                                 User
                             </a>
                         </li>
@@ -85,12 +85,59 @@
                             </ul>
                         </li>
                     </ul>
-                    <a href="/publish" class="header-menu-item">
-                        Upload
-                    </a>
-                    <a href="/taxonomy" class="header-menu-item">
-                        Watch
-                    </a>
+                    <ul class="header-menu-item" id="browse-menu">
+                        <li class="header-button">
+                            <a href="#" class="dropdown-button">
+                                Publish
+                            </a>
+                        </li>
+                        <li>
+                            <ul class="dropdown shade">
+                                <li>
+                                    <a href="#">My Profile</a>
+                                </li>
+                                <li>
+                                    <a href="#">My Folder</a>
+                                </li>
+                                <li>
+                                    <a href="#">Admin</a>
+                                </li>
+                                <li>
+                                    <a href="#">Review List</a>
+                                </li>
+                                <li>
+                                    <a href="#">Log Out</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="header-menu-item" id="browse-menu">
+                        <li class="header-button">
+                            <a href="#" class="dropdown-button">
+                                Browse
+                            </a>
+                        </li>
+                        <li>
+                            <ul class="dropdown shade">
+                                <li>
+                                    <a href="#">My Profile</a>
+                                </li>
+                                <li>
+                                    <a href="#">My Folder</a>
+                                </li>
+                                <li>
+                                    <a href="#">Admin</a>
+                                </li>
+                                <li>
+                                    <a href="#">Review List</a>
+                                </li>
+                                <li>
+                                    <a href="#">Log Out</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    
                 </div>
             </div>
         </div>
@@ -112,9 +159,11 @@
                         <div class="description">
                             <h3>Witch Hunt Online</h3>
                             <p>International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </p>
-                            <div class="video-actions">
-                                <a href="#"><span>View High Quality</span></a>
-                                <a href="#"><span>Download</span></a>
+                            <div class="video-meta">
+                                <span>Date: </span><a href="#">10/05/2012</a>
+                            </div>
+                            <div class="video-meta">
+                                <span>Author: </span><a href="#">papuanvoices</a>
                             </div>
                         </div>
                     </div>
@@ -122,105 +171,7 @@
 
                 <div class="full row no-v-padding row-title"><h4>Latest Videos</h4></div>
                 <div class="row" id="latestvideos">
-                    <div class="four columns video tablet-one">
-                        <div class="viewport shade">
-                            <img src="images/v1.png">
-                        </div>
-                        <div class="under">
-                            <h5>Tembok Bolong</h5>
-                        </div>
-                        <div class="rollover">
-                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                        </div>
-                    </div>
-                    <div class="four columns video tablet-one">
-                        <div class="viewport shade">
-                            <img src="images/v2.png">
-                        </div>
-                        <div class="under">
-                            <h5>The Last Hunter</h5>
-                        </div>
-                        <div class="rollover">
-                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                        </div>
-                    </div>
-                    <div class="four columns video tablet-one">
-                        <div class="viewport shade">
-                            <img src="images/v3.png">
-                        </div>
-                        <div class="under">
-                            <h5>Buruh Migran</h5>
-                        </div>
-                        <div class="rollover">
-                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                        </div>
-                    </div>
-                    <div class="four columns video tablet-one">
-                        <div class="viewport shade">
-                            <img src="images/v1.png">
-                        </div>
-                        <div class="under">
-                            <h5>Tembok Bolong</h5>
-                        </div>
-                        <div class="rollover">
-                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                        </div>
-                    </div>
-                    <div class="four columns video tablet-one">
-                        <div class="viewport shade">
-                            <img src="images/v3.png">
-                        </div>
-                        <div class="under">
-                            <h5>Buruh Migran</h5>
-                        </div>
-                        <div class="rollover">
-                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                        </div>
-                    </div>
-                    <div class="four columns video tablet-one">
-                        <div class="viewport shade">
-                            <img src="images/v2.png">
-                        </div>
-                        <div class="under">
-                            <h5>The Last Hunter</h5>
-                        </div>
-                        <div class="rollover">
-                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                        </div>
-                    </div>
-                    <div class="four columns video tablet-one">
-                        <div class="viewport shade">
-                            <img src="images/v1.png">
-                        </div>
-                        <div class="under">
-                            <h5>Tembok Bolong</h5>
-                        </div>
-                        <div class="rollover">
-                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                        </div>
-                    </div>
-                    <div class="four columns video tablet-one">
-                        <div class="viewport shade">
-                            <img src="images/v3.png">
-                        </div>
-                        <div class="under">
-                            <h5>Buruh Migran</h5>
-                        </div>
-                        <div class="rollover">
-                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                        </div>
-                    </div>
-                    <div class="four columns video tablet-one">
-                        <div class="viewport shade">
-                            <img src="images/v2.png">
-                        </div>
-                        <div class="under">
-                            <h5>The Last Hunter</h5>
-                        </div>
-                        <div class="rollover">
-                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                        </div>
-                    </div>
+                    
                     <div class="six columns centered load-more"><a class="button large" href="#">Load More</a></div>
                 </div>
 
@@ -229,7 +180,7 @@
 
             <div class="three columns news sidebar">
                 <div class="sidebar-section light-shade">
-                    <div class="featured-filmmaker">
+                    <div class="featured-content">
                         <a href="#">
                             <img class="featured-image" src="images/image_mini_2.png">
                             <span class="featured-text">
@@ -245,7 +196,7 @@
                     <a href="http://www.facebook.com/group.php?gid=43640854087" target="_blank"><div class="fb"></div></a>
                 </div>
 
-                <div class="sidebar-section shade">
+                <div class="sidebar-section shade news-portlet">
                     <div class="column-title">
                         <span class="column-title-icon"></span>
                         <h4 id='news-title'>News & Events</h4>
@@ -255,9 +206,12 @@
                         <li><a href="#"><p class="date">June, 23</p><h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
                         <li><a href="#"><p class="date">July, 01</p><h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
                     </ul>
+                    <div class="column-more">
+                        <a href="#">More...</a>
+                    </div>
                 </div>
 
-                <div class="sidebar-section shade">
+                <div class="sidebar-section shade comments-portlet">
                     <span class="column-title-icon"></span>
                     <div class="column-title ">
                         <span class="column-title-icon"></span>
@@ -268,6 +222,9 @@
                         <li><a href="#"><p class="date">May, 19</p><h5>philippe on Trou et Construction Citerne</h5></a></li>
                         <li><a href="#"><p class="date">July, 02</p><h5>philippe on Trou et Construction Citerne</h5></a></li>
                     </ul>
+                    <div class="column-more">
+                        <a href="#">More...</a>
+                    </div>
                 </div>
             </div>
         </div>
