Latest video.html

--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -142,13 +142,13 @@
                         <p>International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </p>
                     </div>
                 </div>
+                <div class="column-title light-shade video-comments-title">
+                    <a href="#">
+                        <h4>Comments</h4>
+                    </a>
+                </div>
                 <div id="video-comments" class="full row no-v-padding">
                     <div class="sidebar-section shade">
-                        <div class="column-title light-shade">
-                            <a href="#">
-                                <h4 id='news-title'>Comments</h4>
-                            </a>
-                        </div>
                         <ul class="comments-list">
                             <li class="comment">
                                 <p class="content">Tembok Bolong</p>
