Added projects folder and moved it to the footer

--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -155,7 +155,7 @@ There are over AUD1000 in prizes and winners will be invited to a master class o
             </div>
             <div class="three columns">
                 <h5>Our Projects</h5>
-                <ul>
+                <ul id="projects-tree">
                     <li>Technology</li>
                     <li>Research & Publications</li>
                     <li>Content & Compilations</li>
