--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -169,7 +169,10 @@
                     </div>
                 </div>
 
-                <div class="full row no-v-padding row-title"><h4>Latest Videos</h4></div>
+                <div class="full row no-v-padding row-title">
+                    <h4>Latest Videos</h4>
+                    <a href="#" class="rss icon"></a>
+                </div>
                 <div class="row" id="latestvideos">
                     
                     <div class="six columns centered load-more"><a class="button large" href="#">Load More</a></div>
@@ -228,7 +231,7 @@
                 </div>
             </div>
         </div>
-        <div class="full row no-v-padding row-title"><h4>EngageMedia.org</h4></div>
+        <div class="full row no-v-padding row-title"><h4>EngageMedia Projects</h4></div>
         <div class="content row">
             <div class="three columns sidebar">
                 <div class="sidebar-section shade">
