Added project footer ids to front and video pages

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -306,7 +306,7 @@
             </div>
             <div class="three columns">
                 <h5>Our Projects</h5>
-                <ul>
+                <ul id="projects-tree">
                     <li>Technology</li>
                     <li>Research & Publications</li>
                     <li>Content & Compilations</li>
