--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -258,7 +258,7 @@
                 </ul>
             </div>
             <div class="three columns">
-                <h5>Our Projects</h5>
+                <h5 id="projects-tree">Our Projects</h5>
                 <ul>
                     <li>Technology</li>
                     <li>Research & Publications</li>
