Added publish and browse header menus

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -61,7 +61,7 @@
                     </ul>
                     <ul class="header-menu-item" id="user-menu">
                         <li class="header-button">
-                            <a href="#" class="dropdown-button">
+                            <a href="#" class="user">
                                 User
                             </a>
                         </li>
@@ -85,10 +85,10 @@
                             </ul>
                         </li>
                     </ul>
-                    <ul class="header-menu-item" id="browse-menu">
+                    <ul class="header-menu-item" id="publish-menu">
                         <li class="header-button">
-                            <a href="#" class="dropdown-button">
-                                Publish
+                            <a href="#" class="user">
+                                Upload2
                             </a>
                         </li>
                         <li>
@@ -113,7 +113,7 @@
                     </ul>
                     <ul class="header-menu-item" id="browse-menu">
                         <li class="header-button">
-                            <a href="#" class="dropdown-button">
+                            <a href="#" class="user">
                                 Browse
                             </a>
                         </li>
@@ -137,7 +137,6 @@
                             </ul>
                         </li>
                     </ul>
-                    
                 </div>
             </div>
         </div>
