--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -85,12 +85,58 @@
                             </ul>
                         </li>
                     </ul>
-                    <a href="/publish" class="header-menu-item">
-                        Upload
-                    </a>
-                    <a href="/taxonomy" class="header-menu-item">
-                        Watch
-                    </a>
+                    <ul class="header-menu-item" id="publish-menu">
+                        <li class="header-button">
+                            <a href="#" class="user">
+                                Upload
+                            </a>
+                        </li>
+                        <li>
+                            <ul class="dropdown shade">
+                                <li>
+                                    <a href="#">My Profile</a>
+                                </li>
+                                <li>
+                                    <a href="#">My Folder</a>
+                                </li>
+                                <li>
+                                    <a href="#">Admin</a>
+                                </li>
+                                <li>
+                                    <a href="#">Review List</a>
+                                </li>
+                                <li>
+                                    <a href="#">Log Out</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="header-menu-item" id="browse-menu">
+                        <li class="header-button">
+                            <a href="#" class="user">
+                                Browse
+                            </a>
+                        </li>
+                        <li>
+                            <ul class="dropdown shade">
+                                <li>
+                                    <a href="#">My Profile</a>
+                                </li>
+                                <li>
+                                    <a href="#">My Folder</a>
+                                </li>
+                                <li>
+                                    <a href="#">Admin</a>
+                                </li>
+                                <li>
+                                    <a href="#">Review List</a>
+                                </li>
+                                <li>
+                                    <a href="#">Log Out</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
