improve home page

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -36,10 +36,12 @@
         <div class="row no-v-padding header">
             <div class="twelve columns header">
                 <a href="#" class="main-logo-link"><div class="one column main-logo"></div></a>
-                <a href="#" class="main-title-link"><div class="five columns main-title"></a>
-                    <h2>EngageMedia</h2>
-                    <p>Social justice and environmental video from the Asia Pacific</p>
-                </div>
+                <a href="#" class="main-title-link">
+                    <div class="five columns main-title">
+                        <h2>EngageMedia</h2>
+                        <p>Social justice and environmental video from the Asia Pacific</p>
+                    </div>
+                </a>
                 <div class="six columns offset-by-one search">
                     <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EngageMedia">
                 </div>
@@ -181,17 +183,6 @@
 
 
             <div class="three columns news sidebar">
-                <div class="sidebar-section light-shade">
-                    <div class="featured-content">
-                        <a href="#">
-                            <img class="featured-image" src="images/image_mini_2.png">
-                            <span class="featured-text">
-                                <h5>Featured Item </h5>
-                                International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day. 
-                            </span>
-                        </a>
-                    </div>
-                </div>
                 <div class="sidebar-section social-networks">
                     <span>Stay in touch!</span>
                     <a href="http://twitter.com/EngageMedia" target="_blank"><div class="twitter"></div></a>
@@ -232,6 +223,19 @@
         </div>
         <div class="full row no-v-padding row-title"><h4>EngageMedia Projects</h4></div>
         <div class="content row">
+            <div class="six columns sidebar">
+                <div class="sidebar-section light-shade">
+                    <div class="featured-content">
+                        <a href="#">
+                            <img class="featured-image" src="images/image_mini_2.png">
+                            <span class="featured-text">
+                                <h5>World Press Freedom day</h5>
+                                <p>International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day.</p>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
             <div class="three columns sidebar">
                 <div class="sidebar-section shade">
                     <div class="column-title">
@@ -239,45 +243,22 @@
                     </div>
                     <ul id="blogs-right-portlet">
                         <li><a href="#"><p class="date">May, 16</p><h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5></a></li>
+                        <li><a href="#"><p class="date">May, 16</p><h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5></a></li>
+                        <li><a href="#"><p class="date">May, 16</p><h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5></a></li>
                     </ul>
+
                 </div>
             </div>
             <div class="three columns sidebar">
-                <div class="sidebar-section shade">
-                    <div class="column-title">
-                        <h4 id="blogs-title">Projects</h4>
+                <div class="sidebar-section light-shade">
+                    <div class="featured-content">
+                        <a href="#">
+                            <img class="featured-image" src="images/image_mini_2.png">
+                            <span class="featured-text">
+                                <h5>World Press Freedom day</h5>
+                            </span>
+                        </a>
                     </div>
-                    <ul id="blogs-right-portlet">
-                        <li><a href="#"><h5>Technology</h5></a></li>
-                        <li><a href="#"><h5>Research & Publications</h5></a></li>
-                        <li><a href="#"><h5>Content & Compilations</h5></a></li>
-                        <li><a href="#"><h5>Network Building & Training</h5></a></li>
-                        <li><a href="#"><h5>Translations</h5></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="three columns sidebar">
-                <div class="sidebar-section shade">
-                    <div class="column-title">
-                        <h4 id="blogs-title">Project Logos</h4>
-                    </div>
-                    <ul id="blogs-right-portlet">
-                        <li><a href="#"><h5>Content?</h5></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="three columns sidebar">
-                <div class="sidebar-section shade">
-                    <div class="column-title">
-                        <h4 id="blogs-title">About Us</h4>
-                    </div>
-                    <ul id="blogs-right-portlet">
-                        <li><h5>Editorial Policy</h5></a></li>
-                        <li><h5>Help</h5></a></li>
-                        <li><h5>Support Us</h5></a></li>
-                        <li><h5>Get Involved</h5></a></li>
-                        <li><h5>Donate</h5></a></li>
-                    </ul>
                 </div>
             </div>
         </div>
