--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -32,15 +32,17 @@
     
 </head>
 <body>
-    <div id="upper-container">
+        <div id="upper-container">
         <div class="row no-v-padding header">
             <div class="twelve columns header">
                 <a href="#" class="main-logo-link"><div class="one column main-logo"></div></a>
-                <a href="#" class="main-title-link"><div class="three columns main-title"></a>
-                    <h2>EngageMedia</h2>
-                    <p>Social justice and environmental video from the Asia Pacific</p>
-                </div>
-                <div class="three columns offset-by-one search">
+                <a href="#" class="main-title-link">
+                    <div class="five columns main-title">
+                        <h2>EngageMedia</h2>
+                        <p>Social justice and environmental video from the Asia Pacific</p>
+                    </div>
+                </a>
+                <div class="six columns offset-by-one search">
                     <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EngageMedia">
                 </div>
                 <div class="six columns menu">
@@ -88,7 +90,7 @@
                     <ul class="header-menu-item" id="publish-menu">
                         <li class="header-button">
                             <a href="#" class="user">
-                                Upload
+                                Publish
                             </a>
                         </li>
                         <li>
