--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -64,7 +64,7 @@
                     </ul>
                     <ul class="header-menu-item" id="user-menu">
                         <li class="header-button">
-                            <a href="#" class="dropdown-button">
+                            <a href="#" class="user">
                                 User
                             </a>
                         </li>
