fix projects listing on video page

--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -305,8 +305,8 @@
                 </ul>
             </div>
             <div class="three columns">
-                <h5 id="projects-tree">Our Projects</h5>
-                <ul>
+                <h5>Our Projects</h5>
+                <ul id="projects-tree">
                     <li>Technology</li>
                     <li>Research & Publications</li>
                     <li>Content & Compilations</li>
