Added newsletter portlet

--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -211,7 +211,7 @@ There are over AUD1000 in prizes and winners will be invited to a master class o
                     <li>Translations</li>
                 </ul>
             </div>
-            <div class="three columns">
+            <div class="three columns" id="newsletter-footer">
                 <h5>Stay In Touch</h5>
                 <ul>
                     <li>
