--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -314,7 +314,7 @@
                     <li>Translations</li>
                 </ul>
             </div>
-            <div class="three columns">
+            <div class="three columns" id="newsletter-footer">
                 <h5>Stay In Touch</h5>
                 <ul>
                     <li>
