added top featured item portlet

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -181,8 +181,19 @@
 
             </div>
 
-
             <div class="three columns news sidebar">
+                <div class="sidebar-section light-shade">
+                    <div class="featured-filmmaker">
+                        <a href="#">
+                            <img src="images/image_mini_2.png" class="featured-image">
+                            <span class="featured-text">
+                                <h5>Featured Item </h5>
+                                International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day. 
+                            </span>
+                        </a>
+                    </div>
+                </div>
+
                 <div class="sidebar-section social-networks">
                     <span>Stay in touch!</span>
                     <a href="http://twitter.com/EngageMedia" target="_blank"><div class="twitter"></div></a>
