added two bottom featured portlets

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -236,7 +236,7 @@
         <div class="content row">
             <div class="six columns sidebar">
                 <div class="sidebar-section light-shade">
-                    <div class="featured-content">
+                    <div class="featured-content" id="featured-left">
                         <a href="#">
                             <img class="featured-image" src="images/image_mini_2.png">
                             <span class="featured-text">
@@ -262,7 +262,7 @@
             </div>
             <div class="three columns sidebar">
                 <div class="sidebar-section light-shade">
-                    <div class="featured-content">
+                    <div class="featured-content" id="featured-right">
                         <a href="#">
                             <img class="featured-image" src="images/image_mini_2.png">
                             <span class="featured-text">
