--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -181,7 +181,10 @@ There are over AUD1000 in prizes and winners will be invited to a master class o
                 </div>
             </div>
         </div>
+
+    <div class="listingBar"></div> <!-- for the video listings -->
     <div class="row" id="latestvideos"></div> <!-- for the video listings -->
+    <div class="listingBar"></div> <!-- for the video listings -->
     </div>
     <div class="row separate-thick"></div>
     <div id="lower-container">
