fix video listings and rss links

--- a/em/skin/theme_resources/list.html
+++ b/em/skin/theme_resources/list.html
@@ -149,7 +149,7 @@
             <h4>Latest Videos</h4>
             <a href="#" class="rss icon"></a>
         </div>
-        <div class="content row">
+        <div class="content row" id="video-listings">
 
                 <div class="three columns video">
                     <a class="featured-video-image" href="http://new.engagemedia.org/Members/tryarmunion/videos/try-arm-worker-interview-2/view" title="''">
